# chatatui

./: Cargo.toml  readme.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs
frontend/src/widgets/: chat.rs  input.rs  mod.rs
types/: Cargo.toml
types/src/: lib.rs
